<resources>

    <string name="Text_Content">请输入长度为128位的字符</string>
    <string name="Text_File">文件路径</string>
    <string name="Button_Browse">浏览</string>
    <string name="Text_Key">请输入长度为128位的密码</string>
    <string name="Text_Result">加解密结果</string>
    <string name="Button_Encrypt">加密</string>
    <string name="Button_Decrypt">解密</string>
    <string name="Text_Privatepath">存储路径:</string>
    <string name="app_name">AndroidAES</string>
    <string name="_16">请输入长度为128位的数据</string>
    <string name="SubBytes">S盒置换</string>
    <string name="shiftrow">行移位</string>
    <string name="mixcolumns">列混淆</string>
    <string name="addrawkey">轮密钥加</string>
    <string name="out">输出</string>
    <string name="execute">计算</string>
    <string name="YES">是</string>
    <string name="NO">否</string>
    <string name="raws">10</string>
    <string name="Positive">正序</string>
    <string name="inverted">倒序</string>
    <string name="xor">请输入异或矩阵</string>
    <string name="save">保存</string>
    <string name="MainActivity">主界面</string>
    <string name="CalculatorActivity">验证计算器</string>
    <string name="SettingActivity">设置</string>
    <string name="Exit">退出</string>
    <string name="inputraw">请输入迭代轮数:</string>
    <string name="filepath">输出文件路径:</string>
    <string name="process">是否导出加解密过程:</string>
    <string name="rawkey">是否导出密钥扩展过程:</string>
</resources>
