<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.MainActivity">

    <EditText
            android:id="@+id/Text_Content"
            android:layout_width="350dp"
            android:layout_height="136dp"
            android:gravity="top"
            android:background="@drawable/view_bg"
            android:alpha="0.5"
            android:hint="@string/Text_Content"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor"/>

    <EditText
            android:id="@+id/Text_File"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:hint="@string/Text_File"
            android:background="@drawable/view_bg"
            android:alpha="0.5"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/Text_Content"
            app:layout_constraintTop_toBottomOf="@id/Text_Content"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor"/>

    <Button
            android:id="@+id/Button_Browse"
            android:layout_height="79dp"
            android:layout_width="93dp"
            android:background="@drawable/button_bg"
            android:text="@string/Button_Browse"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/Text_Content"
            app:layout_constraintBottom_toTopOf="@id/Text_Key"
            app:layout_constraintRight_toRightOf="@id/Text_Content"/>

    <EditText
            android:id="@+id/Text_Key"
            android:layout_width="348dp"
            android:layout_height="50dp"
            android:hint="@string/Text_Key"
            android:background="@drawable/view_bg"
            android:alpha="0.5"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/Text_File"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:inputType="text"
            tools:ignore="LabelFor"/>

    <EditText
            android:id="@+id/Text_Result"
            android:layout_width="348dp"
            android:layout_height="138dp"
            android:hint="@string/Text_Result"
            android:background="@drawable/view_bg"
            android:alpha="0.5"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/Text_Key"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/Button_Encrypt"
            android:layout_height="57dp"
            android:layout_width="164dp"
            android:background="@drawable/button_bg"
            android:text="@string/Button_Encrypt"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/Text_Result"
            app:layout_constraintLeft_toLeftOf="@id/Text_Content"
            android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/Button_Decrypt"
            android:layout_height="56dp"
            android:layout_width="156dp"
            android:text="@string/Button_Decrypt"
            android:background="@drawable/button_bg"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="@id/Text_Content"
            app:layout_constraintTop_toBottomOf="@id/Text_Result"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/Text_Privatepath"
            android:layout_width="348dp"
            android:layout_height="57dp"
            android:hint="@string/Text_Privatepath"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/Button_Encrypt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"/>


</android.support.constraint.ConstraintLayout>