<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".Activity.SettingActivity">
    <TextView
            android:id="@+id/inputraw"
            android:layout_width="163dp"
            android:layout_height="27dp"
            android:alpha="0.5"
            android:text="@string/inputraw"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            tools:ignore="RtlHardcoded"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_dark"/>

    <EditText
            android:id="@+id/rounds"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="top"
            android:background="@drawable/view_bg"
            android:alpha="0.5"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/inputraw"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:inputType="number"
            tools:ignore="LabelFor"/>
    <TextView
            android:id="@+id/filepath"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/filepath"
            app:layout_constraintLeft_toLeftOf="@id/inputraw"
            app:layout_constraintTop_toBottomOf="@id/inputraw"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/background_dark"/>
    <TextView
            android:id="@+id/path"
            android:layout_width="323dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filepath"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

    <TextView
            android:id="@+id/message"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/process"
            android:textColor="@android:color/background_dark"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/path"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/path"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <RadioGroup
            android:id="@+id/rgSex"
            app:layout_constraintTop_toBottomOf="@id/message"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" >

        <RadioButton
                android:id="@+id/radio1"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@android:drawable/btn_radio"
                android:layout_marginStart="50dp"
                android:text="@string/YES"/>
        <RadioButton
                android:id="@+id/radio2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@android:drawable/btn_radio"
                android:checked="true"
                android:text="@string/NO"/>
    </RadioGroup>

    <TextView
            android:id="@+id/rawkey"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/rawkey"
            android:textColor="@android:color/background_dark"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/path"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgSex"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <RadioGroup
            android:id="@+id/rg"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rawkey"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:ignore="MissingConstraints">

        <RadioButton
                android:id="@+id/radio3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@android:drawable/btn_radio"
                android:layout_marginStart="50dp"
                android:text="@string/YES"/>
        <RadioButton
                android:id="@+id/radio4"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@android:drawable/btn_radio"
                android:checked="true"
                android:text="@string/NO"/>
    </RadioGroup>
    <Button
            android:id="@+id/save"
            android:layout_height="50dp"
            android:layout_width="100dp"
            android:background="@drawable/button_bg"
            android:text="@string/save"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/rg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>
</android.support.constraint.ConstraintLayout>
